# twitterScraper

./: .gitignore  README.md  config.py  docker-compose.yml  main.py  pyproject.toml
docker/: Dockerfile
src/api/: main.py
src/collectors/: base_collector.py
src/collectors/twitter/: collector.py  constants.py  engagement.py  following.py  mentions.py  rate_limiting.py  search.py  threads.py  timeline.py  tokens.py  tweets.py  workflow.py
src/collectors/twitter/workflows/: __init__.py  complete_workflow.py  engagement_focused.py  timeline_focused.py
src/database/: db.py  models.py
src/utils/: logging.py
